Optimize performance stack and upgrade to Java 21